fix: 配置环境变量

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -207,7 +207,7 @@
 <!--          href="//qzz-static.forwe.store/evaluation-mng/static/assets/cache.d887b710.js">-->
 </head>
 
-<body>
+<body style="height: auto">
 <div id="root" style="height: auto">
     <div class="app" style="height: auto">
         <div class="_evaluation_layout_1eu7k_1" style="height: auto">
